--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "dev.jahidhasanco.movieapp"
+        applicationId "dev.jahidhasanco.fliq"
         minSdk 21
         targetSdk 31
         versionCode 1
