--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,6 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:3.4.0'
 
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
