--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.4.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
 }
