--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieApp">
         <activity
-            android:name=".ui.activity.SeeAllMovieActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.activity.YoutubeVideoPlayerActivity"
-            android:exported="true"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".ui.activity.MovieDetailsActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.activity.MainActivity"
-            android:exported="true"
-            android:screenOrientation="fullSensor">
+            android:name=".ui.activity.SplashScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.SeeAllMovieActivity" />
+        <activity
+            android:name=".ui.activity.YoutubeVideoPlayerActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.activity.MovieDetailsActivity"
+            />
+        <activity
+            android:name=".ui.activity.MainActivity"
+           />
 
         <meta-data
             android:name="preloaded_fonts"
