--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,17 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven{
+        jcenter()
+        maven { url = 'https://jitpack.io' }
 
-            url "https://jitpack.io"
 
-        }
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+
         classpath 'com.google.gms:google-services:4.3.10'
 
         // NOTE: Do not place your application dependencies here; they belong
