--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,22 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+        maven { url='https://jitpack.io'}
+        jcenter()
+    }
+}
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
+        maven { url ='https://jitpack.io' }
         jcenter() // Warning: this repository is going to shut down soon
+
+
     }
 }
 rootProject.name = "fliq"
